tests/parser/errors/save_empty_path.mochi
let rows = [1, 2, 3]
save rows to ""
